--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 
 <title>
   
-  404 Page not found :: APACHE  — Hello Friend NG Theme
+  404 Page not found :: APACHE  — SkyWalking
   
 </title>
 
