--- a/about/index.html
+++ b/about/index.html
@@ -19,7 +19,7 @@ It makes use of a variety of open source projects including:
 
 <title>
   
-  About :: APACHE  — Hello Friend NG Theme
+  About :: APACHE  — SkyWalking
   
 </title>
 
