--- a/blogs/goisforlovers/index.html
+++ b/blogs/goisforlovers/index.html
@@ -18,7 +18,7 @@ This document is a brief primer on using Go templates." />
 
 <title>
   
-  (Hu)go Template Primer :: APACHE  — Hello Friend NG Theme
+  (Hu)go Template Primer :: APACHE  — SkyWalking
   
 </title>
 
