--- a/blogs/hugoisforlovers/index.html
+++ b/blogs/hugoisforlovers/index.html
@@ -22,7 +22,7 @@ Follow the following steps:
 
 <title>
   
-  Getting Started with Hugo :: APACHE  — Hello Friend NG Theme
+  Getting Started with Hugo :: APACHE  — SkyWalking
   
 </title>
 
