--- a/blogs/migrate-from-jekyll/index.html
+++ b/blogs/migrate-from-jekyll/index.html
@@ -19,7 +19,7 @@
 
 <title>
   
-  Migrate to Hugo from Jekyll :: APACHE  — Hello Friend NG Theme
+  Migrate to Hugo from Jekyll :: APACHE  — SkyWalking
   
 </title>
 
