--- a/downloads/download/index.html
+++ b/downloads/download/index.html
@@ -17,7 +17,7 @@
 
 <title>
   
-  Downloading the Apache HTTP Server :: APACHE  — Hello Friend NG Theme
+  Downloading the Apache HTTP Server :: APACHE  — SkyWalking
   
 </title>
 
