--- a/fr/blogs/debuter-avec-hugo/index.html
+++ b/fr/blogs/debuter-avec-hugo/index.html
@@ -20,7 +20,7 @@ Des informations plus complètes sont disponibles sur la page installing hugo
 
 <title>
   
-  Débuter avec Hugo :: APACHE  — Hello Friend NG Theme
+  Débuter avec Hugo :: APACHE 
   
 </title>
 
