--- a/fr/blogs/introduction-aux-modeles-hugo/index.html
+++ b/fr/blogs/introduction-aux-modeles-hugo/index.html
@@ -18,7 +18,7 @@ Ce document est une introduction sur l&amp;rsquo;utilisation de Go templates." /
 
 <title>
   
-  Introduction aux modèles (Hu)go :: APACHE  — Hello Friend NG Theme
+  Introduction aux modèles (Hu)go :: APACHE 
   
 </title>
 
