--- a/fr/blogs/migrer-vers-hugo-depuis-jekyll/index.html
+++ b/fr/blogs/migrer-vers-hugo-depuis-jekyll/index.html
@@ -18,7 +18,7 @@
 
 <title>
   
-  Migrer vers Hugo depuis Jekyll :: APACHE  — Hello Friend NG Theme
+  Migrer vers Hugo depuis Jekyll :: APACHE 
   
 </title>
 
