--- a/blogs/creating-a-new-theme/index.html
+++ b/blogs/creating-a-new-theme/index.html
@@ -18,7 +18,7 @@ We&amp;rsquo;ll start with creating a new site with a very basic template." />
 
 <title>
   
-  Creating a New Theme :: APACHE  — Hello Friend NG Theme
+  Creating a New Theme :: APACHE  — SkyWalking
   
 </title>
 
