--- a/fr/blogs/creation-dun-nouveau-theme/index.html
+++ b/fr/blogs/creation-dun-nouveau-theme/index.html
@@ -18,7 +18,7 @@ Nous allons commencer par créer un nouveau site avec un modèle très basique."
 
 <title>
   
-  Création d&#39;un nouveau thème :: APACHE  — Hello Friend NG Theme
+  Création d&#39;un nouveau thème :: APACHE 
   
 </title>
 
